tests/algorithms/x/Kotlin/data_structures/heap/randomized_heap.error
kotlinc: exit status 1
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/workspace/mochi/tests/algorithms/x/Kotlin/data_structures/heap/randomized_heap.kt:56:40: error: type mismatch: inferred type is Int but BigInteger! was expected
    if ((r1).toBigInteger().compareTo((NIL)) == 0) {
                                       ^
/workspace/mochi/tests/algorithms/x/Kotlin/data_structures/heap/randomized_heap.kt:59:40: error: type mismatch: inferred type is Int but BigInteger! was expected
    if ((r2).toBigInteger().compareTo((NIL)) == 0) {
                                       ^
/workspace/mochi/tests/algorithms/x/Kotlin/data_structures/heap/randomized_heap.kt:84:42: error: type mismatch: inferred type is Int but BigInteger! was expected
    if ((root).toBigInteger().compareTo((NIL)) == 0) {
                                         ^
/workspace/mochi/tests/algorithms/x/Kotlin/data_structures/heap/randomized_heap.kt:99:45: error: type mismatch: inferred type is Int but BigInteger! was expected
    return (root).toBigInteger().compareTo((NIL)) == 0
                                            ^
